[package]
name = "wasserstein"
version = "0.1.0"
authors = ["Najib Ishaq <nishaq@my.uri.edu>"]
description = "This crate provides an implementation of the Wasserstein Distance metric on multi-dimensional probability distributions."
repository = "https://github.com/URI-ABD/wasserstein"
keywords = ["wasserstein", "flow", "optimization"]
categories = ["algorithms", "distance"]
license = "MIT"
edition = "2018"

# Publishing lock.
# When you're ready to start publishing, set publish to true
# and update the release github action.
publish = false

[dependencies]
ndarray = "^0.14"

[build-dependencies]
cc = "^1.0"
